<resources>
    <string name="permission_open_manual">%s权限已被禁用，请在系统设置中授予，否则无法正常使用%s</string>
    <string name="permission_to_setting">去设置</string>
    <string-array name="exerciseLevel">
        <item>轻度</item>
        <item>中度</item>
        <item>重度</item>
    </string-array>
    <string name="app_name">微泰动态</string>
    <string name="Register_Title_Register">Register</string>
    <string name="Button_Register">Register</string>
    <string name="title_home">首页</string>
    <string name="title_history">历史</string>
    <string name="title_trends">趋势</string>
    <string name="title_bg">血糖</string>
    <string name="title_bg_record">血糖记录</string>
    <string name="title_event">事件</string>
    <string name="TabBarItemTitle_Event">事件</string>
    <string name="suggest_calibration">血糖校准:</string>
    <string name="suggest_cali">建议\n<u>校准</u></string>
    <string name="hyper_title">高血糖</string>
    <string name="hyper_description">Glucose &gt; %1$.1f </string>
    <string name="hypo_title">低血糖</string>
    <string name="hypo_description">Glucose &lt; %1$.1f </string>
    <string name="bg_title">血糖</string>
    <string name="bg_description">%1$.1f </string>
    <string name="trend_test">项目</string>
    <string name="trend_results">结果</string>
    <string name="trend_reference">参考区间</string>
    <string name="mbg_title">MBG </string>
    <string name="mbg_normal"> %1$s - %2$s</string>
    <string name="mvalue_title">M-value</string>
    <string name="mvalue_normal">控制良好 %1$s - %2$s\n控制一般 %3$s - %4$s\n控制不佳 &gt; %5$s</string>
    <string name="cv_title">%CV</string>
    <string name="cv_normal">%1$s - %2$s</string>
    <string name="jindex_title">J-index</string>
    <string name="iqr_normal">%1$s - %2$s</string>
    <string name="aac56_title">AAC<sub>%s</sub> (day•%s)</string>
    <string name="aac56_normal" />
    <string name="auc56_title">AUC<sub>%s</sub> (day•%s)</string>
    <string name="auc56_normal">&lt; %s</string>
    <string name="lbgi_title">LBGI</string>
    <string name="adrr_title">ADRR</string>
    <string name="adrr_normal">低风险 &lt; %1$s\n中等风险 %2$s - %3$s\n高风险 &gt; %4$s</string>
    <string name="grade_title">GRADE</string>
    <string name="grade_normal">&lt; %s</string>
    <string name="lage_title">LAGE </string>
    <string name="lage_normal">&lt; %s</string>
    <string name="mage_title">MAGE </string>
    <string name="mage_normal">&lt; %s</string>
    <string name="mag_title">MAG (%s/hour) </string>
    <string name="mag_normal" />
    <string name="modd_title">MODD </string>
    <string name="modd_normal">&lt; %s</string>
    <string name="conga4_title">CONGA<sub>4</sub></string>
    <string name="conga4_normal" />
    <string name="event_insulin">胰岛素</string>
    <string name="event_carbs">饮食</string>
    <string name="event_medicine">用药</string>
    <string name="event_exercise">运动</string>
    <string name="insulin_preset">胰岛素预设</string>
    <string name="diet_preset">饮食预设</string>
    <string name="medication_preset">用药预设</string>
    <string name="exercise_preset">运动预设</string>
    <string name="save">保存</string>
    <string name="time">时间</string>
    <string name="type">胰岛素</string>
    <string name="dosage">数量</string>
    <string name="name">食物</string>
    <string name="carbohydrate">数量</string>
    <string name="intensity">运动强度</string>
    <string name="medicine">用药</string>
    <string name="duration">持续时间</string>
    <string name="insulin_null">请完成输入</string>
    <string name="insulin_dosage_null">请完成输入</string>
    <string name="mealrark_null">请完成输入</string>
    <string name="diet_carbohydrate_null">请完成输入</string>
    <string name="medicineName_null">请完成输入</string>
    <string name="medicineDosage_null">请完成输入</string>
    <string name="intensity_null">请完成输入</string>
    <string name="exercise_duration_null">请完成输入</string>
    <string name="profile">个人信息</string>
    <string name="gender">性别</string>
    <string name="diabetes">糖尿病类型</string>
    <string name="email">邮箱地址</string>
    <string name="user_name_start">名</string>
    <string name="user_name_center">中间名</string>
    <string name="user_name_end">姓</string>
    <string name="user_birth">出生日期</string>
    <string name="user_height">身高</string>
    <string name="user_wight">体重</string>
    <string name="btn_ok">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="setting">个人中心</string>
    <string name="alert_setting">提醒设置</string>
    <string name="setting_transmitter">发射器</string>
    <string name="setting_glucose_unit">血糖单位</string>
    <string name="setting_language">语言</string>
    <string name="setting_theme">风格</string>
    <string name="setting_other">其他</string>
    <string name="history_all">全部</string>
    <string name="history_glucose">血糖</string>
    <string name="history_other">其他</string>
    <string name="trend_7days">7天</string>
    <string name="trend_30days">30天</string>
    <string name="trend_14days">14天</string>
    <string name="trend_costom">自定义</string>
    <string name="glucose_average">平均葡萄糖值</string>
    <string name="low_hi_glucose">葡萄糖目标范围内时间(TIR)</string>
    <string name="hyper">高：</string>
    <string name="event_count">高血糖事件</string>
    <string name="average_duration">平均持续时间</string>
    <string name="hypo">低：</string>
    <string name="low_event_count">低血糖事件</string>
    <string name="low_average_duration">平均持续时间</string>
    <string name="daily_trends">动态葡萄糖图谱(AGP)</string>
    <string name="Urgent_Low_Alarm">低血糖紧急提醒</string>
    <string name="Low_Glucose">低血糖阈值</string>
    <string name="High_Glucose">高血糖阈值</string>
    <string name="Rise_Rate">血糖上升过快</string>
    <string name="Fall_Rate">血糖下降过快</string>
    <string name="Signal_Loss">信号丢失</string>
    <string name="Terms_of_Service">服务条款</string>
    <string name="Privacy_Policy">隐私协议</string>
    <string name="User_Agreement">《服务条款》</string>
    <string name="Privacy_Policy2">《隐私协议》</string>
    <string name="Clear_information">注销账户</string>
    <string name="bg_test_value">请输入血糖测试值</string>
    <string name="bg_calibrate">校准</string>
    <string name="bg_record">记录</string>
    <string name="login">登录</string>
    <string name="Forget_Password">忘记密码?</string>
    <string name="password">密码</string>
    <string name="login_email">邮箱地址</string>
    <string name="Regist">注册</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="Terms_of_Service_url">https://wtqapi.pancares.com/treaty/用户服务条款.html</string>
    <string name="Privacy_Policy_url">https://wtqapi.pancares.com/treaty/隐私协议.html</string>
    <string name="logout">退出登录</string>
    <string name="emailAddress">邮箱地址</string>
    <string name="ConfirmPassword">确认密码</string>
    <string name="Verificationcode">验证码</string>
    <string name="send">发送验证码</string>
    <string name="Continue">下一步</string>
    <string name="Avator">头像</string>
    <string name="email_password_empty">用户名或密码为空</string>
    <string name="reset">重置密码</string>
    <string name="Novolin">诺和灵</string>
    <string name="Humalog">优泌乐</string>
    <string name="Noodles">米饭</string>
    <string name="Potatoes">土豆</string>
    <string name="Apple">苹果</string>
    <string name="Chocolate">巧克力</string>
    <string name="Soft_Drink">饮料</string>
    <string name="Metformin">二甲双胍</string>
    <string name="Acarbose">阿卡波糖c</string>
    <string name="Avandamet">达格列净片</string>
    <string name="guide_tip1">当您的传感器葡萄糖读数高于以下值时，您将收到提醒：</string>
    <string name="guide_tip0">若要正常使用蓝牙，应用程序可能会请求访问您的设备位置。点击“允许”</string>
    <string name="guide_ble">您的发射器和手机通过蓝牙连接。必须“打开”蓝牙，系统才能正常工作。</string>
    <string name="guide_disturb">我们建议您检查是否关闭“请勿打扰”功能。\n\n

如果启用了“请勿打扰”，则不会收到包含声音或振动的提醒。 </string>
    <string name="guide_insert">请使用传感器敷贴器将葡萄糖探头贴敷于植入部位。</string>
    <string name="more">更多</string>
    <string name="no_transmitter_paired">未绑定发射器</string>
    <string name="New_Sensor">新传感器</string>
    <string name="Continue_Current_Sensor">原传感器</string>
    <string name="sensor_detected">检测到传感器，请确认是否为新传感器</string>
    <string name="Remaining">剩余</string>
    <string name="warm_up_remaining">剩余%s分钟</string>
    <string name="sensor_is">传感器</string>
    <string name="warming_up">传感器预热中</string>
    <string name="min">分钟</string>
    <string name="download_data">下载数据...</string>
    <string name="hr6">6小时</string>
    <string name="hr12">12小时</string>
    <string name="hr24">24小时</string>
    <string name="pair">配对</string>
    <string name="expand">展开</string>
    <string name="Collapse">收起</string>
    <string name="guide_alert">不要忽略高血糖和低血糖的症状。\n\n如果您的血糖提醒和传感器血糖读数与您的症状或期望不符，请使用血糖仪测量指尖血。</string>
    <string name="low_gluecose_alert">低血糖提醒</string>
    <string name="high_gluecose_alert">高血糖提醒</string>
    <string name="blood_glucose_unit">血糖单位</string>
    <string name="alert_and_warnings">提醒</string>
    <string name="Recieving_Cmgs_alerts">接收CGMS提醒</string>
    <string name="Bluetooth">蓝牙</string>
    <string name="do_not_disturb">请勿打扰</string>
    <string name="insert_sensor">植入传感器</string>
    <string name="guide_msg">为了接收CGM提醒，例如低血糖提醒，您必须允许该应用发送通知。</string>
    <string name="Location">定位</string>
    <string name="refresh_loading">正在刷新数据中...</string>
    <string name="refresh_can_loading">下拉可以刷新</string>
    <string name="refresh_loading_new">正在加载...</string>
    <string name="refresh_send_floor">释放进入二楼</string>
    <string name="refresh_release">松开立即刷新</string>
    <string name="refresh_complete">刷新完成</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="refresh_last_time">\'上次更新\' M-d HH:mm</string>
    <string name="bg_top">请注意用于校准的血糖值的检出时间最好控制在5分钟内，不要超过10分钟。</string>
    <string name="bg_limit">校准请在指血测量值检出后5分钟内完成</string>
    <string name="bg_pair">请先配对发射器</string>
    <string name="bg_record_completed">保存完成</string>
    <string name="loading">加载中…</string>
    <string name="sending">发送中…</string>
    <string name="setting_share">分享和关注</string>
    <string name="share_authorize">我的分享</string>
    <string name="share_follow">我的关注</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="password_uneq">两次输入密码不相同</string>
    <string name="Clear_information_content">此操作将完全清除账号及相关数据，请确认</string>
    <string name="Pairing_Succeed">配对成功</string>
    <string name="Pairing_Failed">配对失败</string>
    <string name="Connecting_Failed">连接失败</string>
    <string name="Pairing">配对中</string>
    <string name="Search_Timeout">搜索超时</string>
    <string name="Searching">搜索中</string>
    <string name="Connecting">连接中</string>
    <string name="sensor_expired">传感器过期</string>
    <string name="Rising">上升</string>
    <string name="Rising_Fast">快速上升</string>
    <string name="Falling">下降</string>
    <string name="Falling_Fast">快速下降</string>
    <string name="min_ago">&#160;分钟前</string>
    <string name="expiring_in">过期&#160;</string>
    <string name="author_account_user">+ 账号授权</string>
    <string name="log_upload">使用日志反馈</string>
    <string name="share_tip_author">将自己的血糖数据分享给其他用户</string>
    <string name="login_content_1">使用已注册的账号登录</string>
    <string name="setting_open_type">发布型号</string>
    <string name="notice_method">提醒方式</string>
    <string name="notice_frequency">提醒频率</string>
    <string name="Guide_Low_Alert_Title">低血糖提醒</string>
    <string name="Guide_High_Alert_Title">高血糖提醒</string>
    <string name="low_urgent_value">低血糖紧急提醒阈值</string>
    <string name="common_notice">常规提醒</string>
    <string name="low_threshold">低血糖提醒阈值</string>
    <string name="urgent_notice">紧急提醒</string>
    <string name="system_notice">系统提醒</string>
    <string name="notice_content">提醒内容</string>
    <string name="alert_mode">提醒模式</string>
    <string name="setting_about">关于</string>
    <string name="setting_software_name">软件名称</string>
    <string name="setting_open_version">发布版本号</string>
    <string name="setting_soft_version">软件版本号</string>
    <string name="setting_check_version">检测版本</string>
    <string name="author_wechat_user">+ 微信授权</string>
</resources>