<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.microtech.aidexx.views.ActionBarWidget
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftIcon="@drawable/ic_back"
        app:titleText="@string/setting_about" />


    <LinearLayout
        style="@style/baseMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?attr/bgSetting"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/launcher"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher_weitai2" />


            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                app:has_next="false"
                app:title="@string/setting_software_name" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:has_next="false"
                app:title="@string/setting_open_type" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_openVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:has_next="false"
                app:title="@string/setting_open_version" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_softVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:has_next="false"
                app:title="@string/setting_soft_version" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_checkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:has_next="true"
                app:title="@string/setting_check_version" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:has_next="true"
                app:title="@string/Terms_of_Service" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_protocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:has_next="true"
                app:has_line="true"
                app:title="@string/Privacy_Policy" />

            <com.microtech.aidexx.views.SettingItemWidget
                android:id="@+id/setting_upload_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:has_line="false"
                app:has_next="true"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/log_upload" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />
    </LinearLayout>

</LinearLayout>