<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/layout_line" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_pwd"
        style="@style/MyEditText"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bgColor"
        android:drawableStart="@drawable/ic_pwd"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:singleLine="true" />

    <include layout="@layout/layout_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_content_1"
            android:textColor="?colorDesc" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Forget_Password"
            android:textColor="?appColorAccent"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</LinearLayout>